<resources>
    <string name="app_name">华数会议</string>

    <string name="personal_center">个人中心</string>
    <string name="join_meeting">参加会议</string>
    <string name="create_meeting">发起会议</string>
    <string name="address_book">通讯录</string>

    <string name="create_meeting_new">新建会议</string>
    <string name="initiate">发起</string>
    <string name="mute_audio_all">全员静音</string>
    <string name="cancel_mute_audio_all">取消全员静音</string>

    <string name="rtc_room_input_error_tip">"房间号和用户名不能为空"</string>
    <string name="rtc_permisson_error_tip">"用户没有允许需要的权限，加入通话失败"</string>


    <string name="registered">注册</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="sure">确定</string>
    <string name="back">返回</string>
    <string name="join">加入</string>

    <string name="user_name">用户账号 : </string>
    <string name="user_name2">用户昵称 : </string>
    <string name="user_password">用户密码 : </string>
    <string name="user_verification_code">验证码 : </string>
    <string name="repeat_password">重复密码 : </string>
    <string name="new_password">新密码 : </string>
    <string name="repeat_new_password">重复新密码 : </string>

    <string name="input_user">请输入账号</string>
    <string name="input_user_nick">请输入昵称</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="send_verify_code">发送验证码</string>

    <string name="meeting_name">会议名称 : </string>
    <string name="hint_meeting_name">请输入会议名称</string>
    <string name="meeting_people">会议人员 : </string>
    <string name="meeting_pwd">参会密码 : </string>
    <string name="hint_meeting_pwd">请输入参会密码</string>
    <string name="user_balance">账户余额 : </string>
    <string name="meeting_no">会议号 : </string>
    <string name="input_meeting_no">输入会议号</string>
    <string name="input_quick_join_meeting">快速加入会议</string>
    <string name="latest_people">最近联系人</string>

    <string name="user_name_">账号:</string>
    <string name="user_name2_">昵称:</string>
    <string name="rnb">元</string>

</resources>