<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.android.hsdemo.ui.login.vm.VMLogin" />
    </data>

    <LinearLayout
        android:layout_width="580dp"
        android:layout_height="326dp"
        android:background="@drawable/bg_gradient_body"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DefaultShowTextStyle"
                        android:layout_width="96dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/user_name" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etUserName"
                        style="@style/DefaultEditTextStyle"
                        android:nextFocusRight="@+id/btnCode"
                        android:inputType="number"
                        android:layout_height="35dp"
                        android:hint="@string/input_user"
                        android:text="@={vm.userName2}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DefaultShowTextStyle"
                        android:layout_width="96dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/user_verification_code" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etVerificationCode"
                        style="@style/DefaultEditTextStyle"
                        android:layout_height="35dp"
                        android:inputType="number"
                        android:hint="@string/input_verification_code"
                        android:text="@={vm.verificationCode}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DefaultShowTextStyle"
                        android:layout_width="96dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{vm.getDefaultTextOfUserPassword}" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etUserPassword"
                        style="@style/DefaultEditTextStyle"
                        android:layout_height="35dp"
                        android:inputType="numberPassword"
                        android:hint="@string/input_password"
                        android:nextFocusDown="@+id/etUserRepeatPassword"
                        android:text="@={vm.userPassword2}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="37dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DefaultShowTextStyle"
                        android:layout_width="96dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{vm.getDefaultTextOfUserRepeatPassword}" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etUserRepeatPassword"
                        style="@style/DefaultEditTextStyle"
                        android:layout_height="35dp"
                        android:inputType="numberPassword"
                        android:hint="@string/input_password"
                        android:nextFocusDown="@+id/btnOK"
                        android:text="@={vm.repeatPassword}" />

                </LinearLayout>
            </LinearLayout>

            <com.android.hsdemo.custom.button.ButtonVerify
                android:id="@+id/btnVerify"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

        <com.android.hsdemo.custom.ClipLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btnOK"
                style="@style/DefaultButtonStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="17dp"
                android:onClick="onRegisteredOrForgetClick"
                android:nextFocusUp="@+id/etPassword">

                <ImageView
                    android:id="@+id/btnOKImg"
                    style="@style/DefaultButtonInnerImageStyle"
                    android:src="@mipmap/icon_register_0" />

                <TextView
                    android:id="@+id/btnOKTv"
                    style="@style/DefaultButtonInnerTextStyle"
                    android:text="@{vm.getSureButtonNameOfFragmentType}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnCancel"
                style="@style/DefaultButtonStyle"
                android:layout_marginEnd="10dp"
                android:nextFocusUp="@+id/etPassword"
                android:onClick="onBackClick">

                <ImageView
                    android:id="@+id/btnCancelImg"
                    style="@style/DefaultButtonInnerImageStyle"
                    android:src="@mipmap/icon_back_0" />

                <TextView
                    android:id="@+id/btnCancelTv"
                    style="@style/DefaultButtonInnerTextStyle"
                    android:text="@string/back" />
            </LinearLayout>

        </com.android.hsdemo.custom.ClipLinearLayout>

    </LinearLayout>
</layout>